--- a/index.html
+++ b/index.html
@@ -722,12 +722,20 @@
                     response += `3. LEGO Kids Magnetic Building Block Toys - 15-25 €<br>`;
                     response += `<a href="https://m.shein.com/Kids-Magnetic-Building-Block-Toys-p-35568048.html" target="_blank" style="color:#667eea; text-decoration:underline; font-weight:bold;">Δες στο Shein</a>`;
                 } else {
-                    response += `Δεν κατάλαβα ακριβώς, αλλά μπορώ να σε βοηθήσω!<br><br>`;
-                    response += `Δοκίμασε να ρωτήσεις για:<br>`;
-                    response += `- χειμερινό μπουφάν<br>`;
-                    response += `- παπούτσια<br>`;
-                    response += `- δώρο γενεθλίων<br>`;
-                    response += `- στολή απόκριες<br>`;
-                    response += `- τσάντες<br>`;
-                    response += `- κούκλες<br>`;
-                    response += `- Lego
+    response += `Δεν κατάλαβα ακριβώς, αλλά μπορώ να σε βοηθήσω!<br><br>`;
+    response += `Δοκίμασε να ρωτήσεις για:<br>`;
+    response += `- χειμερινό μπουφάν<br>`;
+    response += `- παπούτσια<br>`;
+    response += `- δώρο γενεθλίων<br>`;
+    response += `- στολή απόκριες<br>`;
+    response += `- τσάντες<br>`;
+    response += `- κούκλες<br>`;
+    response += `- Lego<br>`;
+    response += `- παιχνίδια δράσης<br>`;
+    response += `- παζλ<br>`;
+    response += `- βιβλία / παραμύθια<br>`;
+    response += `- παγούρια νερού<br>`;
+    response += `- πάνες / μωρομάντηλα<br>`;
+    response += `- γάλα μωρού<br>`;
+    response += `- αθλητικά ρούχα`;
+}
