--- a/index.html
+++ b/index.html
@@ -721,24 +721,23 @@
         response += `<a href="https://www.skroutz.gr/c/380/paidika-paixnidia/f/123456/lego.html?keyphrase=lego+friends" target="_blank" style="color:#667eea; text-decoration:underline; font-weight:bold;">Δες Lego Friends στο Skroutz</a>`;
     } 
     else {
-        response += `Δεν κατάλαβα ακριβώς, αλλά μπορώ να σε βοηθήσω!<br><br>`;
-        response += `Δοκίμασε να ρωτήσεις για:<br>`;
-        response += `- χειμερινό μπουφάν<br>`;
-        response += `- παπούτσια<br>`;
-        response += `- δώρο γενεθλίων<br>`;
-        response += `- στολή απόκριες<br>`;
-        response += `- τσάντες<br>`;
-        response += `- κούκλες<br>`;
-        response += `- Lego<br>`;
-        response += `- πάνες<br>`;
-        response += `- γάλα μωρού<br>`;
-        response += `- παιχνίδια δράσης<br>`;
-        response += `- παζλ<br>`;
-        response += `- βιβλία / παραμύθια<br>`;
-        response += `- παγούρια νερού<br>`;
-        response += `- αθλητικά ρούχα`;
-    }
-
+    response += "Δεν κατάλαβα ακριβώς, αλλά μπορώ να σε βοηθήσω!<br><br>";
+    response += "Δοκίμασε να ρωτήσεις για:<br>";
+    response += "- χειμερινό μπουφάν<br>";
+    response += "- παπούτσια<br>";
+    response += "- δώρο γενεθλίων<br>";
+    response += "- στολή απόκριες<br>";
+    response += "- τσάντες<br>";
+    response += "- κούκλες<br>";
+    response += "- Lego<br>";
+    response += "- παιχνίδια δράσης<br>";
+    response += "- παζλ<br>";
+    response += "- βιβλία / παραμύθια<br>";
+    response += "- παγούρια νερού<br>";
+    response += "- πάνες / μωρομάντηλα<br>";
+    response += "- γάλα μωρού<br>";
+    response += "- αθλητικά ρούχα";
+}
     setAnswer(response);
     setQuestion('');
 };
