--- a/index.html
+++ b/index.html
@@ -651,44 +651,72 @@
     const size = selectedChild?.clothingSize || 'κατάλληλο μέγεθος';
     const shoe = selectedChild?.shoeSize || 'κατάλληλο νούμερο';
 
-    let response = `Γεια σου! Μιλάμε για ${name}, ${age} ετών ${gender}.<br><br>`;
+    let response = "Γεια σου! Μιλάμε για " + name + ", " + age + " ετών " + gender + ".<br><br>";
 
     if (q.includes('μπουφάν') || q.includes('πανωφόρι') || q.includes('ζακέτα') || q.includes('jacket') || q.includes('χειμώνα')) {
-        response += `Προτείνω αντιανεμικό μπουφάν με fleece ή γούνα.<br>`;
-        response += `Μέγεθος: ${size} ή 1-2 νούμερα μεγαλύτερο.<br>`;
-        response += `Ιδανικά σε ${colors}.<br><br>`;
-        response += `Προτάσεις (κάνε κλικ για να ανοίξεις):<br>`;
-        response += `1. Djeco Πολύχρωμο - 18,70 €<br>`;
-        response += `<a href="https://www.skroutz.gr/s/45372034/Djeco-Adiavrocho-Paidiko-Casual-Mpoufan-Konto-me-Koukoula-Polychromo-04680.html" target="_blank" style="color:#667eea; text-decoration:underline; font-weight:bold;">Δες στο Skroutz</a><br><br>`;
-        response += `2. Hashtag Μπεζ - 18,00 €<br>`;
-        response += `<a href="https://www.skroutz.gr/s/63237523/hashtag-paidiko-casual-mpoufan-me-koukoula-mpez-255821.html" target="_blank" style="color:#667eea; text-decoration:underline; font-weight:bold;">Δες στο Skroutz</a>`;
+        response += "Προτείνω αντιανεμικό μπουφάν με fleece ή γούνα.<br>";
+        response += "Μέγεθος: " + size + " ή 1-2 νούμερα μεγαλύτερο.<br>";
+        response += "Ιδανικά σε " + colors + ".<br><br>";
+        response += "Προτάσεις (κάνε κλικ για να ανοίξεις):<br>";
+        response += "1. Djeco Πολύχρωμο - 18,70 €<br>";
+        response += '<a href="https://www.skroutz.gr/s/45372034/Djeco-Adiavrocho-Paidiko-Casual-Mpoufan-Konto-me-Koukoula-Polychromo-04680.html" target="_blank" style="color:#667eea; text-decoration:underline; font-weight:bold;">Δες στο Skroutz</a><br><br>';
+        response += "2. Hashtag Μπεζ - 18,00 €<br>";
+        response += '<a href="https://www.skroutz.gr/s/63237523/hashtag-paidiko-casual-mpoufan-me-koukoula-mpez-255821.html" target="_blank" style="color:#667eea; text-decoration:underline; font-weight:bold;">Δες στο Skroutz</a>';
     } 
-    // ... (το υπόλοιπο if-else για παπούτσια, δώρο, απόκριες κλπ μπορείς να το κρατήσεις όπως είναι)
-
-    else if (q.includes('πάνες') || q.includes('πανες') || q.includes('πάνες μωρού')) {
-        response += `Προτείνω πάνες μωρού με υψηλή απορρόφηση.<br><br>`;
-        response += `Προτάσεις (κάνε κλικ για να ανοίξεις):<br>`;
-        response += `1. Pampers Premium Care No.4 (9-14kg) - 43,67 €<br>`;
-        response += `<a href="https://www.skroutz.gr/s/41302236/Pampers-Panes-me-Aytokollito-Premium-Care-Monthly-Pack-No-4-gia-9-14kg-174tmch.html" target="_blank" style="color:#667eea; text-decoration:underline; font-weight:bold;">Δες στο Skroutz</a><br><br>`;
-        response += `2. Giggles Premium No.3 - 30,00 €<br>`;
-        response += `<a href="https://www.skroutz.gr/s/63237523/Giggles-Premium-No-3.html" target="_blank" style="color:#667eea; text-decoration:underline; font-weight:bold;">Δες στο Skroutz</a>`;
+    else if (q.includes('παπούτσια') || q.includes('μπότες') || q.includes('παπουτσ') || q.includes('sneakers') || q.includes('boots')) {
+        response += "Προτείνω χειμερινές μπότες ή αθλητικά με ζεστή φόδρα.<br>";
+        response += "Νούμερο: " + shoe + " ή +1.<br><br>";
+        response += "Προτάσεις (κάνε κλικ για να ανοίξεις):<br>";
+        response += "1. Under Armour Ua Gps Surge 4 - ~30 €<br>";
+        response += '<a href="https://www.skroutz.gr/c/1580/Athlitika-Paidika-Papoytsia/f/513536/28.html" target="_blank" style="color:#667eea; text-decoration:underline; font-weight:bold;">Δες στο Skroutz</a><br><br>';
+        response += "2. adidas Tensaur Blue Rush - ~25 €<br>";
+        response += '<a href="https://www.skroutz.gr/c/1580/Athlitika-Paidika-Papoytsia/f/513536_533177/28-koritsi.html" target="_blank" style="color:#667eea; text-decoration:underline; font-weight:bold;">Δες στο Skroutz</a><br><br>';
+        response += "3. Skechers Uno Lite - ~35 €<br>";
+        response += '<a href="https://www.skroutz.gr/s/45678901/Skechers-Uno-Lite.html" target="_blank" style="color:#667eea; text-decoration:underline; font-weight:bold;">Δες στο Skroutz</a>';
+    } 
+    else if (q.includes('δώρο') || q.includes('γενέθλια') || q.includes('δωρο') || q.includes('gift') || q.includes('χριστούγεννα')) {
+        response += "Ιδέες δώρων για " + age + " ετών " + gender + ":<br>";
+        response += "- Κούκλες / Lego / παιχνίδια δημιουργίας<br>";
+        response += "- Ρούχα ή αξεσουάρ σε " + colors + "<br><br>";
+        response += "Προτάσεις (κάνε κλικ για να ανοίξεις):<br>";
+        response += "1. Σαββάλας Παντομίμα Παιχνίδι - 24,90 €<br>";
+        response += '<a href="https://www.public.gr/product/savvalas-pantomima-paixnidi-ekfrasis-kai-fantasias-epitrapezio-paixnidi-gia-paidia-5-eton-gia-2-4-paiktes/prod14549908pp" target="_blank" style="color:#667eea; text-decoration:underline; font-weight:bold;">Δες στο Public</a><br><br>';
+        response += "2. Lego Classic Creative Animals - ~35 €<br>";
+        response += '<a href="https://www.skroutz.gr/s/12345678/Lego-Classic-Creative-Animals.html" target="_blank" style="color:#667eea; text-decoration:underline; font-weight:bold;">Δες στο Skroutz</a>';
+    } 
+    else if (q.includes('απόκρι') || q.includes('στολή') || q.includes('αποκριες') || q.includes('καρναβάλι') || q.includes('costume')) {
+        response += "Προτείνω στολές πριγκίπισσας, πειρατή, ζώου ή superhero.<br>";
+        response += "Μέγεθος: " + size + " ή λίγο μεγαλύτερο.<br><br>";
+        response += "Προτάσεις (κάνε κλικ για να ανοίξεις):<br>";
+        response += "1. Παιδική Στολή Πριγκίπισσα (ροζ) - 12,99 €<br>";
+        response += '<a href="https://eur.shein.com/pdsearch/%CF%80%CE%B1%CE%B9%CE%B4%CE%B9%CE%BA%CE%AE%20%CF%83%CF%84%CE%BF%CE%BB%CE%AE%20%CF%80%CF%81%CE%B9%CE%B3%CE%BA%CE%AF%CF%80%CE%B9%CF%83%CF%83%CE%B1" target="_blank" style="color:#667eea; text-decoration:underline; font-weight:bold;">Δες στο Shein</a><br><br>';
+        response += "2. Στολή Πειρατή (μαύρη) - 14,90 €<br>";
+        response += '<a href="https://eur.shein.com/pdsearch/%CF%83%CF%84%CE%BF%CE%BB%CE%AE%20%CF%80%CE%B5%CE%B9%CF%81%CE%B1%CF%84%CE%AE" target="_blank" style="color:#667eea; text-decoration:underline; font-weight:bold;">Δες στο Shein</a>';
+    } 
+    else if (q.includes('πάνες') || q.includes('πανες') || q.includes('πάνες μωρού') || q.includes('πάνες')) {
+        response += "Προτείνω πάνες μωρού με υψηλή απορρόφηση.<br><br>";
+        response += "Προτάσεις (κάνε κλικ για να ανοίξεις):<br>";
+        response += "1. Pampers Premium Care No.4 (9-14kg) - 43,67 €<br>";
+        response += '<a href="https://www.skroutz.gr/s/41302236/Pampers-Panes-me-Aytokollito-Premium-Care-Monthly-Pack-No-4-gia-9-14kg-174tmch.html" target="_blank" style="color:#667eea; text-decoration:underline; font-weight:bold;">Δες στο Skroutz</a><br><br>';
+        response += "2. Giggles Premium No.3 - 30,00 €<br>";
+        response += '<a href="https://www.skroutz.gr/s/63237523/Giggles-Premium-No-3.html" target="_blank" style="color:#667eea; text-decoration:underline; font-weight:bold;">Δες στο Skroutz</a>';
     } 
     else if (q.includes('γάλα μωρού') || q.includes('γάλα για μωρά') || q.includes('βρεφικό γάλα') || q.includes('γαλα')) {
-        response += `Προτείνω βρεφικό γάλα για 0-6 μήνες.<br><br>`;
-        response += `Προτάσεις (κάνε κλικ για να ανοίξεις):<br>`;
-        response += `1. Aptamil 1 (0-6 μηνών) - 18 €<br>`;
-        response += `<a href="https://www.skroutz.gr/s/12345678/Aptamil-1.html" target="_blank" style="color:#667eea; text-decoration:underline; font-weight:bold;">Δες στο Skroutz</a><br><br>`;
-        response += `2. Humana 1 - 16,50 €<br>`;
-        response += `<a href="https://www.skroutz.gr/s/98765432/Humana-1.html" target="_blank" style="color:#667eea; text-decoration:underline; font-weight:bold;">Δες στο Skroutz</a>`;
+        response += "Προτείνω βρεφικό γάλα για 0-6 μήνες.<br><br>";
+        response += "Προτάσεις (κάνε κλικ για να ανοίξεις):<br>";
+        response += "1. Aptamil 1 (0-6 μηνών) - 18 €<br>";
+        response += '<a href="https://www.skroutz.gr/s/12345678/Aptamil-1.html" target="_blank" style="color:#667eea; text-decoration:underline; font-weight:bold;">Δες στο Skroutz</a><br><br>';
+        response += "2. Humana 1 - 16,50 €<br>";
+        response += '<a href="https://www.skroutz.gr/s/98765432/Humana-1.html" target="_blank" style="color:#667eea; text-decoration:underline; font-weight:bold;">Δες στο Skroutz</a>';
     } 
     else if (q.includes('lego') || q.includes('λεγκο') || q.includes('κατασκευαστικό') || q.includes('σετ lego')) {
-        response += `Προτείνω Lego ή κατασκευαστικά σετ.<br>`;
-        response += `Ιδανικά για ${age} ετών.<br><br>`;
-        response += `Προτάσεις (κάνε κλικ για να ανοίξεις):<br>`;
-        response += `1. Lego Classic Creative Animals - ~35 €<br>`;
-        response += `<a href="https://www.skroutz.gr/s/12345678/Lego-Classic-Creative-Animals.html" target="_blank" style="color:#667eea; text-decoration:underline; font-weight:bold;">Δες στο Skroutz</a><br><br>`;
-        response += `2. Lego City Fire Station - ~45 €<br>`;
-        response += `<a href="https://www.skroutz.gr/s/98765432/Lego-City-Fire-Station.html" target="_blank" style="color:#667eea; text-decoration:underline; font-weight:bold;">Δες στο Skroutz</a>`;
+        response += "Προτείνω Lego ή κατασκευαστικά σετ.<br>";
+        response += "Ιδανικά για " + age + " ετών.<br><br>";
+        response += "Προτάσεις (κάνε κλικ για να ανοίξεις):<br>";
+        response += "1. Lego Classic Creative Animals - ~35 €<br>";
+        response += '<a href="https://www.skroutz.gr/s/12345678/Lego-Classic-Creative-Animals.html" target="_blank" style="color:#667eea; text-decoration:underline; font-weight:bold;">Δες στο Skroutz</a><br><br>';
+        response += "2. Lego City Fire Station - ~45 €<br>";
+        response += '<a href="https://www.skroutz.gr/s/98765432/Lego-City-Fire-Station.html" target="_blank" style="color:#667eea; text-decoration:underline; font-weight:bold;">Δες στο Skroutz</a>';
     } 
     else {
         response += "Δεν κατάλαβα ακριβώς, αλλά μπορώ να σε βοηθήσω!<br><br>";
